# fighthealthinsurance

./: .coveragerc  .dockerignore  .gitignore  CombinedDockerfile  Dockerfile  LICENSE  Makefile  README.md  RayDockerfile  bootstrap.py  build.sh  build_ray.sh  cluster.yaml  configurations_mypy_django_plugin.py  deploy-requirements.txt  deploy.yaml  fetch_data.sh  initial.py  manage.py  min_version.py  mypy.ini  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  run_local.sh  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: generic.yml
.github/workflows/: ci.yml
charts/: apps.py  urls.py  views.py
charts/static/: canvasjs.min.js
charts/templates/: basic_table_only.html  bokeh.html  index.html
conf/: #nginx.default#  nginx.default  uvlog_config.yaml
data/: preventitivecodes.csv  preventive_diagnosis.csv
fhi_users/: admin.py  emails.py  models.py  signals.py  urls.py  views.py
fhi_users/auth/: auth_forms.py  auth_utils.py  auth_views.py  rest_auth_views.py  (+1 more)
fighthealthinsurance/: __init__.py  admin.py  asgi.py  combined_storage.py  common_view_logic.py  core_forms.py  denial_base.py  easyocr_fetch.py  email_polling_actor.py  email_polling_actor_ref.py  env_utils.py  exec.py  fax_actor.py  fax_actor_ref.py  fax_polling_actor.py  fax_polling_actor_ref.py  fax_utils.py  fax_views.py  followup_emails.py  form_utils.py  forms.py  generate_appeal.py  middleware.py  ml_models.py  model_router.py  models.py  polling_actor_setup.py  process_denial.py  pubmed_tools.py  question_forms.py  ray.py  rest_mixins.py  rest_serializers.py  rest_urls.py  rest_views.py  routing.py  settings.py  staff_views.py  stripe_utils.py  urls.py  (+4 more)
hylafax-settings/: dialrules
k8s/: Dockerfile  deploy.yaml  deploy_dev.yaml  deploy_staging.yaml
scripts/: build.sh  build_django.sh  build_openapidocs.sh  build_ray.sh  build_static.sh  check_shell_style.sh  fetch_data.sh  install.sh  manage.py  run_local.sh  setup_templates.sh  start-server.sh
templates/: security_scan.html
tests/: test_bad_urls.py  test_core_urls_load.py  test_fax_actor.py  test_fax_polling_actor.py  test_faxes.py  test_rest_api.py  test_selenium_appeal_generation.py  test_selenium_follow_up.py  test_sonic_faxes.py  test_tla.py
(+300 files in other folders)
