# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = fighthealthinsurance
version = 0.0.1
description = Fight Health Insurnace
long_description = file: README.md
long_description_content_type = text/markdown
license = 'Apache'
author = Holden Karau
author_email = holden@pigscanfly.ca
classifiers =
    Operating System :: Unix
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
packages = find:
install_requires =
    django >= 4.1.7
    python-dateutil
    pytz
    rfc3339
    icd10-cm
    pandas
    uszipcode
tests_require =
    pytest
    pytest-django
    tox
    isort
    black
    flake8
    django-stubs
    types-python-dateutil
    mypy-extensions

[options.packages.find]
include =
    fighthealthinsurance
    fighthealthinsurance.*
    requirements.txt

[options.extras_require]
tests =
    pytest
    pytest-django
    tox
    isort
    black
    flake8
    mypy-extensions
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    tbump
    twine

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip = env,.tox,.history,.eggs
known_django=django
known_first_party=cal_sync_magic
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests
DJANGO_SETTINGS_MODULE=fighthealthinsurance.settings

[pep8]
[flake8]
max-line-length=88
exclude=env,.tox,docs

[mypy]
mypy_path = ./fighthealthinsurance
plugins =
    configurations_mypy_django_plugin.py

strict_optional = True
ignore_missing_imports = True


[mypy.plugins.django-stubs]
django_settings_module = fighthealthinsurance.settings

[options.package_data]
* = *.csv